--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-discord.py
-python-dotenv
-pandas
-numpy
-xgboost
-scikit-learn
-joblib
-schedule
-requests
+discord.py>=2.0.0
+python-dotenv>=0.20.0
+pandas>=1.3.0
+numpy>=1.20.0
+xgboost>=1.5.0
+scikit-learn>=1.0.0
+joblib>=1.1.0
+schedule>=1.1.0
+requests>=2.27.0
+matplotlib>=3.5.0
+shap>=0.40.0
